# gpxutil

./: .gitignore  Makefile  README.md  pyproject.toml
gpxutil/: cli.py
tests/: test_cli.py
